tests/golden/type_errors/generic_lambda_type_parameter_escape.cd
fun outer<T>(value: T) {
  let inner = fun<U>(copy: T): T { return copy; };
}
