tests/golden/type_errors/generic_lambda_type_parameter_escape.err
Type error at 2:15: type parameter escapes nested function
    let inner = fun<U>(copy: T): T { return copy; };
                ^
